--- a/index.html
+++ b/index.html
@@ -87,15 +87,12 @@
 	onmouseup='document.selection.empty()'>
 	<h1>Yunli</h1>
 	<h2>A Scientist who loves poetry</h2>
-	<br><a href="https://yunlihub.top" target="_blank" class=btn>Journal</a>
+	<br><a href="https://yunlihub.top" target="_blank" class=btn>Blog</a>
 	<br><a href="https://space.bilibili.com/82783756" target="_blank" class=btn>BiliBili</a>
 	<br><a href="https://github.com/yunliyo" target="_blank" class=btn>GitHub</a>
 	<br><a href="mailto:yunlihub@gmail.com" target="_blank" class=btn>E-Mail</a>
 	<br>
-	<footer>&hearts;<br>Que sera, sera<br>Whatever will be, will be<br>The future's not ours to
-		see<br>&hearts;<br>Copyright &copy; 1997-<script>
-			document.write(new Date().getFullYear())
-		</script> by Yunli Inc.<br>All rights reserved.<br>渝ICP备 备案是不可能的</footer>
+	<footer>&hearts;<br>Que sera, sera<br>Whatever will be, will be<br>The future's not ours to see<br>&hearts;<br>Copyright &copy; 1997-<script>document.write(new Date().getFullYear())</script> by Yunli Inc.<br>All rights reserved.<br>渝ICP备 备案是不可能的</footer>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
