--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 	onmouseup='document.selection.empty()'>
 	<h1>Yunli</h1>
 	<h2>A Scientist who loves poetry</h2>
-	<br><a href="https://yunlihub.top" target="_blank" class=btn>Nav</a>
-	<br><a href="./img/1.png" target="_blank" class="btn">Blog</a>
+	<br><a href="https://yunlihub.top" target="_blank" class="btn">Blog</a>
+	<br><a href="./Bookmarks/news.html" target="_blank" class=btn>Nav</a>
 	<br><a href="https://space.bilibili.com/82783756" target="_blank" class=btn>BiliBili</a>
 	<br><a href="https://github.com/yunliyo" target="_blank" class=btn>GitHub</a>
 	<br><a href="mailto:yunlihub@gmail.com" target="_blank" class=btn>E-Mail</a>
