--- a/Bookmarks/tool.html
+++ b/Bookmarks/tool.html
@@ -679,6 +679,8 @@
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://vercel.com/" target="_blank"><span>Vercel</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.cloudflare.com/" target="_blank"><span>Cloudflare</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.aliyun.com/" target="_blank"><span>阿里云</span></a></li>
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://cloud.tencent.com/" target="_blank"><span>腾讯云</span></a></li>
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://cloud.baidu.com/" target="_blank"><span>百度云</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.huaweicloud.com/" target="_blank"><span>华为云</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.upyun.com/" target="_blank"><span>又拍云</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.qiniu.com/" target="_blank"><span>七牛云</span></a></li>
